// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checker large document (snapshot test) 1`] = `
{
  "ast": {
    "_kind": "Document",
    "definitions": [
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "r",
              "range": [
                56,
                57,
              ],
            },
            "optional": false,
            "range": [
              56,
              65,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                59,
                65,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "g",
              "range": [
                67,
                68,
              ],
            },
            "optional": false,
            "range": [
              67,
              76,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                70,
                76,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "b",
              "range": [
                78,
                79,
              ],
            },
            "optional": false,
            "range": [
              78,
              87,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                81,
                87,
              ],
            },
          },
        ],
        "isStatic": true,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "RGB",
          "range": [
            50,
            53,
          ],
        },
        "range": [
          45,
          89,
        ],
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "type",
              "range": [
                117,
                121,
              ],
            },
            "optional": false,
            "range": [
              117,
              154,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "StringType",
              "range": [
                123,
                154,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "x",
              "range": [
                163,
                164,
              ],
            },
            "optional": false,
            "range": [
              163,
              172,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                166,
                172,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "y",
              "range": [
                181,
                182,
              ],
            },
            "optional": false,
            "range": [
              181,
              190,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                184,
                190,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "width",
              "range": [
                199,
                204,
              ],
            },
            "optional": false,
            "range": [
              199,
              212,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                206,
                212,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "height",
              "range": [
                221,
                227,
              ],
            },
            "optional": false,
            "range": [
              221,
              235,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                229,
                235,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "fills",
              "range": [
                244,
                249,
              ],
            },
            "optional": true,
            "range": [
              244,
              257,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "ArrayType",
              "ofType": {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "range": [
                  252,
                  255,
                ],
                "ref": {
                  "_kind": "TypeName",
                  "name": "RGB",
                  "range": [
                    252,
                    255,
                  ],
                },
              },
              "range": [
                252,
                257,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "strokes",
              "range": [
                266,
                273,
              ],
            },
            "optional": true,
            "range": [
              266,
              289,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "LiveListType",
              "ofType": {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "range": [
                  285,
                  288,
                ],
                "ref": {
                  "_kind": "TypeName",
                  "name": "RGB",
                  "range": [
                    285,
                    288,
                  ],
                },
              },
              "range": [
                276,
                289,
              ],
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Rect",
          "range": [
            102,
            106,
          ],
        },
        "range": [
          97,
          297,
        ],
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "type",
              "range": [
                327,
                331,
              ],
            },
            "optional": false,
            "range": [
              327,
              366,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "StringType",
              "range": [
                333,
                366,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "cx",
              "range": [
                375,
                377,
              ],
            },
            "optional": false,
            "range": [
              375,
              385,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                379,
                385,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "cy",
              "range": [
                394,
                396,
              ],
            },
            "optional": false,
            "range": [
              394,
              404,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                398,
                404,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "radius",
              "range": [
                413,
                419,
              ],
            },
            "optional": false,
            "range": [
              413,
              427,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                421,
                427,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "fill",
              "range": [
                436,
                440,
              ],
            },
            "optional": true,
            "range": [
              436,
              448,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "range": [
                445,
                448,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
                "range": [
                  445,
                  448,
                ],
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "stroke",
              "range": [
                457,
                463,
              ],
            },
            "optional": true,
            "range": [
              457,
              469,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "range": [
                466,
                469,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
                "range": [
                  466,
                  469,
                ],
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Circle",
          "range": [
            310,
            316,
          ],
        },
        "range": [
          305,
          477,
        ],
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "mycircle",
              "range": [
                543,
                551,
              ],
            },
            "optional": false,
            "range": [
              543,
              571,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": true,
              "range": [
                553,
                571,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "Circle",
                "range": [
                  564,
                  570,
                ],
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "myrect",
              "range": [
                580,
                586,
              ],
            },
            "optional": false,
            "range": [
              580,
              604,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": true,
              "range": [
                588,
                604,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "Rect",
                "range": [
                  599,
                  603,
                ],
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Storage",
          "range": [
            490,
            497,
          ],
        },
        "range": [
          485,
          612,
        ],
      },
    ],
    "range": [
      7,
      612,
    ],
  },
  "definitions": [
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "r",
            "range": [
              56,
              57,
            ],
          },
          "optional": false,
          "range": [
            56,
            65,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              59,
              65,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "g",
            "range": [
              67,
              68,
            ],
          },
          "optional": false,
          "range": [
            67,
            76,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              70,
              76,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "b",
            "range": [
              78,
              79,
            ],
          },
          "optional": false,
          "range": [
            78,
            87,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              81,
              87,
            ],
          },
        },
      ],
      "isStatic": true,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "RGB",
        "range": [
          50,
          53,
        ],
      },
      "range": [
        45,
        89,
      ],
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "type",
            "range": [
              117,
              121,
            ],
          },
          "optional": false,
          "range": [
            117,
            154,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "StringType",
            "range": [
              123,
              154,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "x",
            "range": [
              163,
              164,
            ],
          },
          "optional": false,
          "range": [
            163,
            172,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              166,
              172,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "y",
            "range": [
              181,
              182,
            ],
          },
          "optional": false,
          "range": [
            181,
            190,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              184,
              190,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "width",
            "range": [
              199,
              204,
            ],
          },
          "optional": false,
          "range": [
            199,
            212,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              206,
              212,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "height",
            "range": [
              221,
              227,
            ],
          },
          "optional": false,
          "range": [
            221,
            235,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              229,
              235,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fills",
            "range": [
              244,
              249,
            ],
          },
          "optional": true,
          "range": [
            244,
            257,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "range": [
                252,
                255,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
                "range": [
                  252,
                  255,
                ],
              },
            },
            "range": [
              252,
              257,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "strokes",
            "range": [
              266,
              273,
            ],
          },
          "optional": true,
          "range": [
            266,
            289,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "LiveListType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "range": [
                285,
                288,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
                "range": [
                  285,
                  288,
                ],
              },
            },
            "range": [
              276,
              289,
            ],
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Rect",
        "range": [
          102,
          106,
        ],
      },
      "range": [
        97,
        297,
      ],
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "type",
            "range": [
              327,
              331,
            ],
          },
          "optional": false,
          "range": [
            327,
            366,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "StringType",
            "range": [
              333,
              366,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cx",
            "range": [
              375,
              377,
            ],
          },
          "optional": false,
          "range": [
            375,
            385,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              379,
              385,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cy",
            "range": [
              394,
              396,
            ],
          },
          "optional": false,
          "range": [
            394,
            404,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              398,
              404,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "radius",
            "range": [
              413,
              419,
            ],
          },
          "optional": false,
          "range": [
            413,
            427,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              421,
              427,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fill",
            "range": [
              436,
              440,
            ],
          },
          "optional": true,
          "range": [
            436,
            448,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "range": [
              445,
              448,
            ],
            "ref": {
              "_kind": "TypeName",
              "name": "RGB",
              "range": [
                445,
                448,
              ],
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "stroke",
            "range": [
              457,
              463,
            ],
          },
          "optional": true,
          "range": [
            457,
            469,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "range": [
              466,
              469,
            ],
            "ref": {
              "_kind": "TypeName",
              "name": "RGB",
              "range": [
                466,
                469,
              ],
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Circle",
        "range": [
          310,
          316,
        ],
      },
      "range": [
        305,
        477,
      ],
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "mycircle",
            "range": [
              543,
              551,
            ],
          },
          "optional": false,
          "range": [
            543,
            571,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": true,
            "range": [
              553,
              571,
            ],
            "ref": {
              "_kind": "TypeName",
              "name": "Circle",
              "range": [
                564,
                570,
              ],
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "myrect",
            "range": [
              580,
              586,
            ],
          },
          "optional": false,
          "range": [
            580,
            604,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": true,
            "range": [
              588,
              604,
            ],
            "ref": {
              "_kind": "TypeName",
              "name": "Rect",
              "range": [
                599,
                603,
              ],
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Storage",
        "range": [
          490,
          497,
        ],
      },
      "range": [
        485,
        612,
      ],
    },
  ],
  "getDefinition": [Function],
  "root": {
    "_kind": "ObjectTypeDefinition",
    "fields": [
      {
        "_kind": "FieldDef",
        "leadingComment": null,
        "name": {
          "_kind": "Identifier",
          "name": "mycircle",
          "range": [
            543,
            551,
          ],
        },
        "optional": false,
        "range": [
          543,
          571,
        ],
        "trailingComment": null,
        "type": {
          "_kind": "TypeRef",
          "asLiveObject": true,
          "range": [
            553,
            571,
          ],
          "ref": {
            "_kind": "TypeName",
            "name": "Circle",
            "range": [
              564,
              570,
            ],
          },
        },
      },
      {
        "_kind": "FieldDef",
        "leadingComment": null,
        "name": {
          "_kind": "Identifier",
          "name": "myrect",
          "range": [
            580,
            586,
          ],
        },
        "optional": false,
        "range": [
          580,
          604,
        ],
        "trailingComment": null,
        "type": {
          "_kind": "TypeRef",
          "asLiveObject": true,
          "range": [
            588,
            604,
          ],
          "ref": {
            "_kind": "TypeName",
            "name": "Rect",
            "range": [
              599,
              603,
            ],
          },
        },
      },
    ],
    "isStatic": false,
    "leadingComment": null,
    "name": {
      "_kind": "TypeName",
      "name": "Storage",
      "range": [
        490,
        497,
      ],
    },
    "range": [
      485,
      612,
    ],
  },
}
`;

exports[`checker large legacy document (snapshot test) 1`] = `
{
  "ast": {
    "_kind": "Document",
    "definitions": [
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "r",
              "range": [
                56,
                57,
              ],
            },
            "optional": false,
            "range": [
              56,
              62,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                59,
                62,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "g",
              "range": [
                64,
                65,
              ],
            },
            "optional": false,
            "range": [
              64,
              70,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                67,
                70,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "b",
              "range": [
                72,
                73,
              ],
            },
            "optional": false,
            "range": [
              72,
              78,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                75,
                78,
              ],
            },
          },
        ],
        "isStatic": true,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "RGB",
          "range": [
            50,
            53,
          ],
        },
        "range": [
          45,
          80,
        ],
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "type",
              "range": [
                108,
                112,
              ],
            },
            "optional": false,
            "range": [
              108,
              145,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "StringType",
              "range": [
                114,
                145,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "x",
              "range": [
                154,
                155,
              ],
            },
            "optional": false,
            "range": [
              154,
              160,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                157,
                160,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "y",
              "range": [
                169,
                170,
              ],
            },
            "optional": false,
            "range": [
              169,
              175,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                172,
                175,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "width",
              "range": [
                184,
                189,
              ],
            },
            "optional": false,
            "range": [
              184,
              194,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                191,
                194,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "height",
              "range": [
                203,
                209,
              ],
            },
            "optional": false,
            "range": [
              203,
              214,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                211,
                214,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "fills",
              "range": [
                223,
                228,
              ],
            },
            "optional": true,
            "range": [
              223,
              236,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "ArrayType",
              "ofType": {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "range": [
                  231,
                  234,
                ],
                "ref": {
                  "_kind": "TypeName",
                  "name": "RGB",
                  "range": [
                    231,
                    234,
                  ],
                },
              },
              "range": [
                231,
                236,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "strokes",
              "range": [
                245,
                252,
              ],
            },
            "optional": true,
            "range": [
              245,
              268,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "LiveListType",
              "ofType": {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "range": [
                  264,
                  267,
                ],
                "ref": {
                  "_kind": "TypeName",
                  "name": "RGB",
                  "range": [
                    264,
                    267,
                  ],
                },
              },
              "range": [
                255,
                268,
              ],
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Rect",
          "range": [
            93,
            97,
          ],
        },
        "range": [
          88,
          276,
        ],
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "type",
              "range": [
                306,
                310,
              ],
            },
            "optional": false,
            "range": [
              306,
              345,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "StringType",
              "range": [
                312,
                345,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "cx",
              "range": [
                354,
                356,
              ],
            },
            "optional": false,
            "range": [
              354,
              361,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                358,
                361,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "cy",
              "range": [
                370,
                372,
              ],
            },
            "optional": false,
            "range": [
              370,
              377,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                374,
                377,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "radius",
              "range": [
                386,
                392,
              ],
            },
            "optional": false,
            "range": [
              386,
              397,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
              "range": [
                394,
                397,
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "fill",
              "range": [
                406,
                410,
              ],
            },
            "optional": true,
            "range": [
              406,
              418,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "range": [
                415,
                418,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
                "range": [
                  415,
                  418,
                ],
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "stroke",
              "range": [
                427,
                433,
              ],
            },
            "optional": true,
            "range": [
              427,
              439,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "range": [
                436,
                439,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
                "range": [
                  436,
                  439,
                ],
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Circle",
          "range": [
            289,
            295,
          ],
        },
        "range": [
          284,
          447,
        ],
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "mycircle",
              "range": [
                513,
                521,
              ],
            },
            "optional": false,
            "range": [
              513,
              541,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": true,
              "range": [
                523,
                541,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "Circle",
                "range": [
                  534,
                  540,
                ],
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "myrect",
              "range": [
                550,
                556,
              ],
            },
            "optional": false,
            "range": [
              550,
              574,
            ],
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": true,
              "range": [
                558,
                574,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "Rect",
                "range": [
                  569,
                  573,
                ],
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Storage",
          "range": [
            460,
            467,
          ],
        },
        "range": [
          455,
          582,
        ],
      },
    ],
    "range": [
      7,
      582,
    ],
  },
  "definitions": [
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "r",
            "range": [
              56,
              57,
            ],
          },
          "optional": false,
          "range": [
            56,
            62,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              59,
              62,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "g",
            "range": [
              64,
              65,
            ],
          },
          "optional": false,
          "range": [
            64,
            70,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              67,
              70,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "b",
            "range": [
              72,
              73,
            ],
          },
          "optional": false,
          "range": [
            72,
            78,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              75,
              78,
            ],
          },
        },
      ],
      "isStatic": true,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "RGB",
        "range": [
          50,
          53,
        ],
      },
      "range": [
        45,
        80,
      ],
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "type",
            "range": [
              108,
              112,
            ],
          },
          "optional": false,
          "range": [
            108,
            145,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "StringType",
            "range": [
              114,
              145,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "x",
            "range": [
              154,
              155,
            ],
          },
          "optional": false,
          "range": [
            154,
            160,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              157,
              160,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "y",
            "range": [
              169,
              170,
            ],
          },
          "optional": false,
          "range": [
            169,
            175,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              172,
              175,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "width",
            "range": [
              184,
              189,
            ],
          },
          "optional": false,
          "range": [
            184,
            194,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              191,
              194,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "height",
            "range": [
              203,
              209,
            ],
          },
          "optional": false,
          "range": [
            203,
            214,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              211,
              214,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fills",
            "range": [
              223,
              228,
            ],
          },
          "optional": true,
          "range": [
            223,
            236,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "range": [
                231,
                234,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
                "range": [
                  231,
                  234,
                ],
              },
            },
            "range": [
              231,
              236,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "strokes",
            "range": [
              245,
              252,
            ],
          },
          "optional": true,
          "range": [
            245,
            268,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "LiveListType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "range": [
                264,
                267,
              ],
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
                "range": [
                  264,
                  267,
                ],
              },
            },
            "range": [
              255,
              268,
            ],
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Rect",
        "range": [
          93,
          97,
        ],
      },
      "range": [
        88,
        276,
      ],
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "type",
            "range": [
              306,
              310,
            ],
          },
          "optional": false,
          "range": [
            306,
            345,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "StringType",
            "range": [
              312,
              345,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cx",
            "range": [
              354,
              356,
            ],
          },
          "optional": false,
          "range": [
            354,
            361,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              358,
              361,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cy",
            "range": [
              370,
              372,
            ],
          },
          "optional": false,
          "range": [
            370,
            377,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              374,
              377,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "radius",
            "range": [
              386,
              392,
            ],
          },
          "optional": false,
          "range": [
            386,
            397,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
            "range": [
              394,
              397,
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fill",
            "range": [
              406,
              410,
            ],
          },
          "optional": true,
          "range": [
            406,
            418,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "range": [
              415,
              418,
            ],
            "ref": {
              "_kind": "TypeName",
              "name": "RGB",
              "range": [
                415,
                418,
              ],
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "stroke",
            "range": [
              427,
              433,
            ],
          },
          "optional": true,
          "range": [
            427,
            439,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "range": [
              436,
              439,
            ],
            "ref": {
              "_kind": "TypeName",
              "name": "RGB",
              "range": [
                436,
                439,
              ],
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Circle",
        "range": [
          289,
          295,
        ],
      },
      "range": [
        284,
        447,
      ],
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "mycircle",
            "range": [
              513,
              521,
            ],
          },
          "optional": false,
          "range": [
            513,
            541,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": true,
            "range": [
              523,
              541,
            ],
            "ref": {
              "_kind": "TypeName",
              "name": "Circle",
              "range": [
                534,
                540,
              ],
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "myrect",
            "range": [
              550,
              556,
            ],
          },
          "optional": false,
          "range": [
            550,
            574,
          ],
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": true,
            "range": [
              558,
              574,
            ],
            "ref": {
              "_kind": "TypeName",
              "name": "Rect",
              "range": [
                569,
                573,
              ],
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Storage",
        "range": [
          460,
          467,
        ],
      },
      "range": [
        455,
        582,
      ],
    },
  ],
  "getDefinition": [Function],
  "root": {
    "_kind": "ObjectTypeDefinition",
    "fields": [
      {
        "_kind": "FieldDef",
        "leadingComment": null,
        "name": {
          "_kind": "Identifier",
          "name": "mycircle",
          "range": [
            513,
            521,
          ],
        },
        "optional": false,
        "range": [
          513,
          541,
        ],
        "trailingComment": null,
        "type": {
          "_kind": "TypeRef",
          "asLiveObject": true,
          "range": [
            523,
            541,
          ],
          "ref": {
            "_kind": "TypeName",
            "name": "Circle",
            "range": [
              534,
              540,
            ],
          },
        },
      },
      {
        "_kind": "FieldDef",
        "leadingComment": null,
        "name": {
          "_kind": "Identifier",
          "name": "myrect",
          "range": [
            550,
            556,
          ],
        },
        "optional": false,
        "range": [
          550,
          574,
        ],
        "trailingComment": null,
        "type": {
          "_kind": "TypeRef",
          "asLiveObject": true,
          "range": [
            558,
            574,
          ],
          "ref": {
            "_kind": "TypeName",
            "name": "Rect",
            "range": [
              569,
              573,
            ],
          },
        },
      },
    ],
    "isStatic": false,
    "leadingComment": null,
    "name": {
      "_kind": "TypeName",
      "name": "Storage",
      "range": [
        460,
        467,
      ],
    },
    "range": [
      455,
      582,
    ],
  },
}
`;
